tests/paczka2/big_fuzzy/84915230.err
Error in line 9: ELi4rD S999 74,2
Error in line 14: ELi4rD S942 77,8
Error in line 20: S740 S999 90,0
Error in line 27: S740 A670 30,9
Error in line 33: ELi4rD S740 97,6
Error in line 40: xGr A670 25,5
Error in line 56: BhlB0 A670 39,5
Error in line 59: xGr S740 6,7
Error in line 54: S740 S942 15,5
Error in line 69: ELi4rD S942 154,70
Error in line 67: BhlB0 S999 10,9
Error in line 68: S740 S999 30,5
Error in line 38: ELi4rD S942 62,6
Error in line 77: ELi4rD S740 -2,6
Error in line 75: S740 A670 89,1
Error in line 85: xGr S740 92,5
Error in line 92: aniXQIRqw S999 47,6
Error in line 100: BhlB0 S999 82,5
Error in line 107: xGr S740 -1,1
Error in line 108: aniXQIRqw S942 79,06
Error in line 106: BhlB0 S740 43,1
Error in line 110: BhlB0 S942 94,7
Error in line 111: BhlB0 S999 22,2
Error in line 119: aniXQIRqw S942 0,0
Error in line 129: S740 S942 41,7
Error in line 127: ELi4rD S999 26,6
Error in line 132: aniXQIRqw S740 23,1
Error in line 133: S740 A670 98,5
Error in line 145: BhlB0 S999 83,6
Error in line 143: aniXQIRqw S942 61,5
Error in line 153: UHu S942 14,8
Error in line 160: S740 S999 75,6
Error in line 162: VCW S999 51,3
Error in line 156: aniXQIRqw S942 35,0
Error in line 170: UHu S740 1,4
Error in line 193: xGr S999 54,17
Error in line 188: xGr S999 54,7
Error in line 209: VCW A670 75,6
Error in line 182: BhlB0 S740 232,0
Error in line 201: xGr S999 9,9
Error in line 210: S740 S740 229,0
Error in line 214: xGr S942 45,9
Error in line 213: BhlB0 S942 5,7
Error in line 232: ELi4rD S740 17a,a
Error in line 228: ELi4rD S740 55,2
Error in line 226: S740 S999 60,6
Error in line 220: VCW S999 46,3
Error in line 235: xGr S999 53,2
Error in line 241: VCW S942 85,2
